# fastapi_template

./: .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pdm.toml  pyproject.toml
scripts/: setup.sh
src/routers/: __init__.py  _tags.py
src/routers/foo/: helpers.py  router.py
src/utils/: env.py
